<resources>
    <string name="app_name">Water and Gas Devlivery App [MVP]</string>
    <string name="login_subtitle">Enter your email and password to securely access your account and manage your services.</string>
    <string name="email_address">Email Address</string>
    <string name="login_title">Welcome Back</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="login_button_text">Login</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="sign_up_here">Sign up here</string>
    <string name="signup_title">Create Account</string>
    <string name="signup_subtitle">Enter your details below to create a new account and get started.</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="already_have_account">Already have an account? </string>
    <string name="login_here">Login here</string>
    <string name="back_button_description">Back button</string>
    <string name="foodgo">Water and Gas</string>
    <string name="order_your_favourite_food">Order your water and gas!</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="water">Water</string>
    <string name="gas_only">Gas</string>
    <string name="rating">4.9</string>
    <string name="forgot">Forgot Password</string>
    <string name="forgot_subtitle">No worries! Enter your email address and we’ll send you instructions to create a new password.</string>
    <string name="forgot_btn">Send</string>
    <string name="otp">Confirm OTP</string>
    <string name="resend">Resend in</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_subtitle">Enter your new password below to secure your account.</string>
    <string name="change_text">Confirm</string>
</resources>